--- a/img/icons/manifest.json
+++ b/img/icons/manifest.json
@@ -2,7 +2,7 @@
   "name": "My PWA Test",
   "short_name": "PWA Test",
   "lang": "en-US",
-  "start_url": "/",
+  "start_url": "/index.html",
   "background_color": "#2C3E50",
   "theme_color": "#18BC9C",
   "display": "standalone",
